# qt-image-processing

./: CMakeLists.txt  ReadMe.txt
src/: main.cpp
src/algorithms/: Algorithm.h  Cartoonize.cpp  Cartoonize.h  CartoonizeOMP.cpp  CartoonizeOMP.h  Greenify.cpp  Greenify.h  Image.cpp  Image.h  Lucy.cpp  Lucy.h  LucyOMP.cpp  LucyOMP.h  Parameters.cpp  Parameters.h
src/gui/: Callback.h  MainWindow.cpp  MainWindow.h
